--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/dslpz/BookSearchEngine/issues"
   },
-  "homepage": "https://github.com/dslpz/BookSearchEngine#readme"
+  "homepage": "https://github.com/dslpz/BookSearchEngine#readme",
+  "dependencies": {
+    "apollo-server-express": "^3.8.2",
+    "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.16"
+  }
 }
