--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/dslpz/BookSearchEngine#readme",
   "dependencies": {
+    "@apollo/client": "^3.6.8",
     "apollo-server-express": "^3.8.2",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
