--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
   "dependencies": {
     "@apollo/client": "^3.6.8",
     "apollo-server-express": "^3.8.2",
+    "bcrypt": "^5.0.1",
+    "express": "^4.18.1",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.16"
+    "mongoose": "^6.3.8",
+    "nodemon": "^2.0.16",
+    "react": "^18.2.0",
+    "tag": "^0.4.17"
   }
 }
