--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^6.3.8",
     "nodemon": "^2.0.16",
     "react": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "tag": "^0.4.17"
   }
 }
